fix: prevent word breaks in code blocks

--- a/theme/resources/css/mkdocs_dhis2.css
+++ b/theme/resources/css/mkdocs_dhis2.css
@@ -136,6 +136,7 @@ body {
 
 .md-typeset code {
   font-size: 80%;
+  word-break: keep-all;
 }
 
 h1,
